...
#else
                    QiblaView(locationManager: locationManager)
#endif
                }
                .tabBarBackgroundIfAvailable(.visible)
                .tabItem {
                    Label("Qibla", systemImage: "location.north.line")
                }
                .tag(Tab.qibla)
                
                TimesView(calculationParameters: calculationParameters(for: stapledLocation), locationTitle: locationTitle(for: stapledLocation))
                    .environment(\.visiblePrayers, preferences.visiblePrayers)
                    .tabBarBackgroundIfAvailable(.visible)
...
                    .tag(Tab.times)
            }
            
            PreferencesView(locationManager: locationManager, preferences: preferences, viewModel: preferencesViewModel)
                .tabBarBackgroundIfAvailable(.visible)
                .tabItem {
                    Label("Preferences", systemImage: "gear")
                }
                .tag(Tab.preferences)
        }
        .onReceive(userNotificationManager.$settingsRequest) { settingsRequest in
            guard case .active(let category) = settingsRequest else { return }
            
...
