...
                    case .compass: mode = .map
                    case .map: mode = .compass
                    }
                } label: {
                    switch mode {
                    case .compass:
                        Label("Map", systemImage: "map")
                    case .map:
                        Label("Compass", systemImage: "gyroscope") // TODO: compass icon
                    }
                }
                .font(.title)
                .buttonStyle(.borderedProminent)
...
